change copyright to my parent company :)

--- a/README.rdoc
+++ b/README.rdoc
@@ -37,7 +37,7 @@ Then to install required gems:
   puts "Their first release listed in the response is #{artist.releases.first.title}"
   puts " which was released on #{artist.releases.first.label}"
 
-  sleep 1 # Discogs asks that you do not hit the service more than once a second from an IP address!
+  sleep 1 # :) Discogs asks that you do not hit the service more than once a second from an IP address!
 
   # Let's find more information about the first release listed in the artist object...
   release = discogs_api.get_release(artist.releases.first.id)
@@ -47,4 +47,4 @@ Then to install required gems:
     puts " #{track.position}) #{track.title} [#{track.duration}]"
   end
 
-Copyright (c) 2011 Rob Lambert, released under the MIT license
+Copyright (c) 2011 Zabada, Inc., released under the MIT license
